Revision history for Locale-CA

0.05
	Include normalized strings

0.04	Thu Jul 16 09:19:57 EDT 2020
	lang can be passed in as a parameter

0.03	Sun Jul 12 21:52:50 EDT 2020
	Added support for French

0.02 Mon Sep 28 10:35:37 EDT 2015
	Changed Quebec to QC, and added 'and Labrador' to
		Newfoundland

0.01	Sun Nov 18 18:17:09 EST 2012
	First draft