@@ -2,6 +2,7 @@ Revision history for Locale-CA
 
 0.05
 	Include normalized strings
+	Use _get_language from Lingua::Conjunction
 
 0.04	Thu Jul 16 09:19:57 EDT 2020
 	lang can be passed in as a parameter
